*****************************************************************************************************
digiKam 5.7.0 - Release date: 2017-07-23

NEW FEATURES:

General     : New tool to export albums by email.
ImageEditor : Add SendByMail tool support.
Showfoto    : Add SendByMail tool support.
LightTable  : Add SendByMail tool support.

BUGFIXES FROM BUGZILLA:

001 ==> 381143 - Camera not removed between invocations.
002 ==> 381306 - Error with import from Fujifilm X-T10.
003 ==> 379869 - Crash of digikam after ending digiam writing changed tags into photos.
004 ==> 361047 - Wishlist: make grouped images more prominently visible [patch].
005 ==> 381510 - "open with" on multiple images only passes first image.
006 ==> 378475 - digiKam crashed after connecting a Camera.
007 ==> 381697 - Cannot remove an image whose file has already been deleted by another application.
008 ==> 380189 - digiKam Import Menu doesn't show all plugins.
009 ==> 376422 - Rotate crashes.
010 ==> 314089 - Tagging faces is not working.
011 ==> 367692 - digiKam crashed trying to save an edited image.
012 ==> 369636 - Batch time stamp adjusting causes digikam to crash and destroys photos.
013 ==> 381762 - Crash on Windows installer.
014 ==> 381766 - Problem compiling digikam from GIT repository.
015 ==> 380359 - Shouldn't "Email Images" be in "Export" menu instead of "Tools" menu?
016 ==> 281921 - Send Images by mail tool cannot process albums.
017 ==> 114508 - Send images by mail tool does not delete its temporary files.
018 ==> 151327 - Send Images by mail dialog is not resizable.
019 ==> 108234 - Thunderbird will not open when sending emails in digiKam.
020 ==> 149915 - Sending selected pictures makes PC hang for 15 minutes + crash.
021 ==> 104918 - digiKam crashes while converting for email purposes.
022 ==> 096507 - Bug in email client selection.
023 ==> 280923 - The command Email messages does not attach the images to the email.